# ChangeLog for app-misc/taskwarrior
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*taskwarrior-1.8.4 (23 Nov 2009)

  23 Nov 2009; James Rowe <jnrowe@gmail.com> +taskwarrior-1.8.4.ebuild:
  Version bump [0d0].

  12 Nov 2009; James Rowe <jnrowe@gmail.com> taskwarrior-1.8.2.ebuild:
  Switched to EAPI 2.

  11 Nov 2009; James Rowe <jnrowe@gmail.com> taskwarrior-1.8.2.ebuild:
  Keyworded amd64.

  11 Nov 2009; James Rowe <jnrowe@gmail.com> taskwarrior-1.8.2.ebuild:
  Keyworded x86.

  03 Oct 2009; James Rowe <jnrowe@gmail.com> taskwarrior-1.8.2.ebuild:
  Keyworded ~x86.

*taskwarrior-1.8.2 (03 Oct 2009)

  03 Oct 2009; James Rowe <jnrowe@gmail.com> +taskwarrior-1.8.2.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
