@@ -4,13 +4,13 @@ Hash: SHA1
 DIST task-1.8.2.tar.gz 207330 RMD160 0ecea2762fe8eeafba7da27a1342a3994393d3cf SHA1 75819350ee1b4659e14b758deb32462b67d9d563 SHA256 d7cf0cb241eb87b3751e3b657c08f73dd34f451f78d8c5f19c4ef1f3af6b3f01
 DIST task-1.8.4.tar.gz 211885 RMD160 21332a7696dbca6bbcb14826272fff130c301e09 SHA1 e453c1b2ca4a4e8d9f91a9dff8d21a7751d08ec4 SHA256 bdcf26dc0fa827b5026b67dbf57e9a5d9dd02815e48e2103eba698006e5b9dab
 EBUILD taskwarrior-1.8.2.ebuild 578 RMD160 64f6f42a6100708788d34d5c3bc406b979bc457a SHA1 e54107fd7c1c0b34db969ce779b2ed05f38cd6f8 SHA256 125648048a73efe5e4b7130f0827ceb0b11ceef1bdf721aa089ccc721352ce58
-EBUILD taskwarrior-1.8.4.ebuild 580 RMD160 dd36751d6b7055de06926799517594a2ed88b408 SHA1 582b2ac178be2a21970991c95af3af3213cc8eec SHA256 dedbee5ccc08c87638b3e94eb12db0ce60f3c21fb0996bb446f08ce2b965b72b
-MISC ChangeLog 763 RMD160 a2dcc5328bca450c553edbe80aaaaca6fae05143 SHA1 115975dab228c4725a360c2be5e60f817108dd95 SHA256 65dc14b9116a0a1efa98f79081fa0c73ae6901a5fb6d34a638123bb2b2c893ae
+EBUILD taskwarrior-1.8.4.ebuild 1098 RMD160 747134b663e3b38baba1e1515b3e7b4454493ff0 SHA1 9ede9874f4d43b377a852025daa7979a70887d0a SHA256 275216e07bcaaa10d287cca842722b06458887744351b48124dce693badfdbb5
+MISC ChangeLog 905 RMD160 c9afb4991974b4594cc01b6fb324ad598865a552 SHA1 f8abb9b7d6f175b137b71c947c6a6ed53ec6f7d5 SHA256 22742bd064424b38a9d2978931ad1cf61d060a014a6b70a254e25a2f6a6708b1
 MISC metadata.xml 479 RMD160 d909e2bcc0b640beaffd238a454f5d5fa0bd65a4 SHA1 8b608061b761ce3142283474cf8b8c57c093c6c4 SHA256 9523f7670f5f90750e1249508fa9d9dfd71d2197eed67889c103c200f8c51ff8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksKcisACgkQzJrj3cAXR0nR3QCaA7P8zc5CmotpHPiL2IKc4OBQ
-4wMAn0Gh0qIXIaMtheZhugpLzilA+9+4
-=joy+
+iEYEARECAAYFAksKeIkACgkQzJrj3cAXR0m3bQCfbpl6daT5W1bjR1cMPayWWqHC
+P2AAniBlf34RSUxZcZ/YXm+GJNy47uSc
+=XAsO
 -----END PGP SIGNATURE-----
