@@ -1,5 +1,5 @@
 sys-libs/ncurses
-sys-libs/ncurses
+sys-libs/ncurses bash-completion? ( app-admin/eselect )
 0
 http://taskwarrior.org/download/task-1.8.4.tar.gz
 
@@ -7,14 +7,14 @@ http://taskwarrior.org/projects/show/taskwarrior/
 GPL-2
 A GTD, todo list, task management, command line utility
 ~amd64 ~x86
-
-
+bash-completion
+vim-syntax zsh-completion bash-completion
 
 
 
 2
 
-install
+install postinst
 
 
 
